2022-10-29T16:27:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3352141567 # 180
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 64 198 / 80 228
* notice: next accum: outdated-unq outdated-all / unq all: 65 200 / 81 230
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-15] / [2022-10-29]

2022-10-29T08:26:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3350723686 # 179
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 64 198 / 80 229
* notice: next accum: outdated-unq outdated-all / unq all: 64 198 / 80 228
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-15]

2022-10-29T01:51:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3349626285 # 178
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 64 198 / 80 228
* notice: next accum: outdated-unq outdated-all / unq all: 64 198 / 80 229
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2022-10-28]

2022-10-28T16:28:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3346971312 # 177
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 63 197 / 79 226
* notice: next accum: outdated-unq outdated-all / unq all: 64 198 / 80 228
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-10-14] / [2022-10-28]

2022-10-28T08:32:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3343992110 # 176