@@ -1,3 +1,11 @@
+2022-10-30T08:24:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3354729734 # 182
+* notice: last 14d: unq all: 3 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 65 200 / 81 230
+* notice: next accum: outdated-unq outdated-all / unq all: 65 200 / 82 230
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-16 2022-10-30]
+
 2022-10-29T16:27:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3352141567 # 180
 * notice: last 14d: unq all: 3 30
